task5/tests/group/tests/output/t5.out
lli: lli: tests/group/tests/output/t5.ll:27:20: error: use of undefined value '%-21886'
%t1 = icmp sgt i32 %-21886, %t0
                   ^

